--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "start": "concurrently \"node ./servers/coap-broker.js\" \"node ./servers/websocket-broker.js\" \"export PORT=8001; node ./servers/coap-proxy-websocket.js\" \"export PORT=8001; node ./servers/websocket-proxy-coap.js\" "
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "concurrently": "^3.4.0",
     "mocha": "^2.4.5"
   },
