--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "websocket": "^1.0.17"
   },
   "scripts": {
-    "test": "mocha ./tests/suits/",
+    "test": "mocha ./tests/suites/",
     "start": "concurrently \"node ./servers/coap-broker.js\" \"node ./servers/websocket-broker.js\" \"export PORT=8001; node ./servers/coap-proxy-websocket.js\" \"export PORT=8001; node ./servers/websocket-proxy-coap.js\" "
   },
   "devDependencies": {
